fix(*): fix layout for sipDomain and wizard
- fix width and height layout for subdomain flex row
- fix wizard button spacing in button footer
- remove wizard footer extra padding within modal

--- a/app/modules/core/settings/sipDomain/_sip-domain-settings.scss
+++ b/app/modules/core/settings/sipDomain/_sip-domain-settings.scss
@@ -42,6 +42,7 @@
   .domain-form {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-start;
     .domain-buttons {
       flex-shrink: 0;
       display: flex;
@@ -49,10 +50,14 @@
     .domain-button {
       flex-shrink: 0;
     }
-    .domain-input {
+    .domain-input-group {
       flex-grow: 1;
       min-width: vr-adjust(200);
+      max-width: vr-adjust(400);
       @include vr-spacing(mr, 0.5);
+    }
+    .domain-input {
+      width: 100%;
     }
   }
 }
